# my_stub_package

./: main.py  pyproject.toml
stubs/: setup.py
stubs/utils/: math_functions.pyi
