[tool.poetry]
name = "my-stub-package"
version = "0.1.0"
description = ""
authors = ["Alaamer <ahmedmuhmmed239@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.9.0"
twine = "^5.0.0"
mymath-stubs = "0.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
